# budget-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
budget-common/: Cargo.toml
budget-common/src/client/: mod.rs
budget-common/src/domain/: mod.rs
budget-server/: Cargo.toml
budget-server/src/: main.rs
budget-server/src/domain/: mod.rs
budget-server/src/handler/: mod.rs
budget-server/src/repository/: mod.rs
budget-server/src/service/: mod.rs
budget-web/: Cargo.toml
budget-web-leptos/: Cargo.toml  index.html
budget-web-leptos/src/: main.rs
budget-web/src/: main.rs
