[package]
name = "budget-server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.3", features = ["rand", "v4", "serde"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }