[package]
name = "budget-server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.3", features = ["rand", "v4", "serde"] }
budget-common = { path = "../budget-common" }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
